# app/Models/Booking.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Booking extends Model
+{
+    /** @use HasFactory<\Database\Factories\BookingFactory> */
+    use HasFactory;
+
+    protected $fillable = [
+        'resource_id',
+        'user_id',
+        'start_time',
+        'end_time'
+    ];
+
+    public function resource()
+    {
+        return $this->belongsTo(Resource::class);
+    }
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
